--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -158,11 +158,22 @@ import Button from '../components/Button.astro';
 </div>
 
 
-<div class="overflow-hidden bg-white shadow flex items-center justify-center">
-  <div class="px-4 py-5 sm:p-6">
-    <iframe class="rounded-lg" width="560" height="315" src="https://www.youtube.com/embed/NX_NW6bt6_s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+  <!-- We've used 3xl here, but feel free to try other max-widths based on your needs -->
+  <div class="mx-auto max-w-3xl">
+    <div class="aspect-w-16 aspect-h-9">
+      <iframe class ="rounded-md" src="https://www.youtube.com/embed/NX_NW6bt6_s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
   </div>
 </div>
+
+
+
+
+
+
+
 
 
 
