--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ import Button from '../components/Button.astro';
         
       </div>
       <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-        <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Free strategy session <span aria-hidden="true">&rarr;</span></a>
+        <a href="https://calendly.com/d/y5z-vzx-bnz/free-strategy-session?month=2023-05" target="blank"class="text-sm font-semibold leading-6 text-gray-900">Free strategy session <span aria-hidden="true">&rarr;</span></a>
       </div>
     </nav>
     <!-- Mobile menu, show/hide based on menu open state. -->
@@ -146,7 +146,7 @@ import Button from '../components/Button.astro';
         <p class="mt-6 text-lg leading-8 text-gray-600">Invest $2.5k per month and get qualified mid-market opportunities sent your way every week. We're experts in on and off market deal origination and help you augment or replace a $250k deal origination team.</p>
         <div class="mt-10 flex items-center justify-center gap-x-6">
           <a href="#" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Free strategy session</a>
-          <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Learn more <span aria-hidden="true">→</span></a>
+          <a href="#features" class="text-sm font-semibold leading-6 text-gray-900">Learn more <span aria-hidden="true">→</span></a>
         </div>
       </div>
     </div>
@@ -285,14 +285,14 @@ import Button from '../components/Button.astro';
   </div>
   <div class="mx-auto max-w-2xl text-center lg:max-w-4xl">
     <h2 class="text-base font-semibold leading-7 text-indigo-600">Pricing</h2>
-    <p class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">The right price for you, whoever you are</p>
+    <p class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">We're only successful when you are, and our pricing reflects that</p>
   </div>
-  <p class="mx-auto mt-6 max-w-2xl text-center text-lg leading-8 text-gray-600">Qui iusto aut est earum eos quae. Eligendi est at nam aliquid ad quo reprehenderit in aliquid fugiat dolorum voluptatibus.</p>
+  <p class="mx-auto mt-6 max-w-2xl text-center text-lg leading-8 text-gray-600">Simple and easy to understand pricing to make sure you see long-term ROI on your investment with us</p>
   <div class="mx-auto mt-16 grid max-w-lg grid-cols-1 items-center gap-y-6 sm:mt-20 sm:gap-y-0 lg:max-w-4xl lg:grid-cols-2">
     <div class="rounded-3xl p-8 ring-1 ring-gray-900/10 sm:p-10 relative bg-white shadow-2xl">
       <h3 id="tier-personal" class="text-base font-semibold leading-7 text-indigo-600">Personal</h3>
       <p class="mt-4 flex items-baseline gap-x-2">
-        <span class="text-5xl font-bold tracking-tight text-gray-900">$39</span>
+        <span class="text-5xl font-bold tracking-tight text-gray-900">$2.5k</span>
         <span class="text-base text-gray-500">/month</span>
       </p>
       <p class="mt-6 text-base leading-7 text-gray-600">The perfect plan if you&#039;re just getting started with our product.</p>
@@ -337,10 +337,10 @@ import Button from '../components/Button.astro';
       <a href="#" aria-describedby="tier-personal" class="mt-8 block rounded-md py-2.5 px-3.5 text-center text-sm font-semibold focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 sm:mt-10 bg-indigo-600 text-white shadow hover:bg-indigo-500">Get started today</a>
     </div>
     <div class="rounded-3xl p-8 ring-1 ring-gray-900/10 sm:p-10 bg-white/60 sm:mx-8 lg:mx-0 sm:rounded-t-none lg:rounded-tr-3xl lg:rounded-bl-none">
-      <h3 id="tier-team" class="text-base font-semibold leading-7 text-indigo-600">Team</h3>
+      <h3 id="tier-team" class="text-base font-semibold leading-7 text-indigo-600">Training + Service</h3>
       <p class="mt-4 flex items-baseline gap-x-2">
-        <span class="text-5xl font-bold tracking-tight text-gray-900">$99</span>
-        <span class="text-base text-gray-500">/month</span>
+        <span class="text-5xl font-bold tracking-tight text-gray-900">$15k</span>
+        <span class="text-base text-gray-500">/quarter</span>
       </p>
       <p class="mt-6 text-base leading-7 text-gray-600">A plan that scales with your rapidly growing business.</p>
       <ul role="list" class="mt-8 space-y-3 text-sm leading-6 text-gray-600 sm:mt-10">
